tests/compiler/fatarrowfunctionsOptionalArgsErrors3/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.9.3/tests/cases/compiler/fatarrowfunctionsOptionalArgsErrors3.ts`, Apache-2.0 License

//@compiler-options: target=es2015
//@compiler-options: strict=false

(...) => 105;
//~^ ERROR: Identifier expected.
